# leadlens-ai

./: .env.example  .gitignore  BETA_LAUNCH_CHECKLIST.md  BETA_OPERATIONS_PLAYBOOK.md  FIRST_CUSTOMER_OPERATIONS.md  HOW_TO_OPEN_DEMO.md  LEADLENS_SAAS_VAULT_ARCHITECTURE.md  PRODUCTION_CHECKLIST.md  SETUP.md  SUPABASE_SETUP.md  VAULT_AUTOMATION_PLAN.md  next.config.mjs  package-lock.json  package.json  supabase-schema.sql  vercel.json
.claude/: launch.json
app/: layout.tsx  page.tsx
lib/: anthropic.ts  learning.ts  pipeline.ts  ranking.ts  stripe.ts
ml/: .gitignore  README.md  pyproject.toml  requirements.txt
ml/docs/: LEADLENS_ML_ADMIN_SPEC.md  LEADLENS_ML_ARCHITECTURE.md  LEADLENS_ML_ASSUMPTION_REGISTRY.md  LEADLENS_ML_DOMAIN_MODEL.md  LEADLENS_ML_INTEGRATION_CONTRACT.md  LEADLENS_ML_MODEL_CARD_TEMPLATE.md  LEADLENS_ML_PROBLEM_DEFINITION.md  LEADLENS_ML_REPOSITORY_INTEGRATION_PLAN.md  LEADLENS_ML_RUNBOOK.md  LEADLENS_ML_SECURITY_MODEL.md
ml/schemas/: opportunity_feature_snapshot.schema.json
ml/sql/: preliminary_ml_schema.sql
ml/src/leadlens_ml/: __init__.py  __main__.py  contracts.py  dataset.py  fixtures.py  inference.py  labeling.py  run_demo.py  run_infer.py  run_real.py  shadow.py  splitting.py  training.py
ml/tests/: test_vertical_slice.py
ml/typescript/: contracts.ts
scripts/: approve-demo-vault-signals.mjs  check-supabase-readiness.mjs  probe-supabase-schema.mjs  seed-lead-hunter-demo.mjs  seed-vault-bridge-demo.mjs  self-serve-smoke.mjs  smoke-customer-vault-delivery.mjs  smoke-intelligence-expansion.mjs  smoke-intelligence-foundation.mjs  (+8 more)
(+378 files in other folders)
