[project]
name = "leadlens-intelligence-lab"
version = "0.1.0"
description = "Standalone pre-integration ML vertical slice for LeadLens"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0","numpy>=1.24","scikit-learn>=1.4","pydantic>=2.0","joblib>=1.3","pyarrow>=14.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
